--- a/index.htm
+++ b/index.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>ONE - Personal Resume</title>
+<title>Sudhanshu Sharma</title>
 <link href="styles.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="css/prettyPhoto.css" type="text/css" media="screen" charset="utf-8" />
 <link href='http://fonts.googleapis.com/css?family=Bree+Serif' rel='stylesheet' type='text/css'>
@@ -29,7 +29,7 @@
 
 <!--Begin About Section-->
     <div id="about">
-    	<h1>About</h1>
+    	<h1>Sudhanshu Sharma</h1>
         <ul id="top-social">
         	<li><a href="#" class="facebook">Facebook</a></li>
             <li><a href="#" class="twitter">Twitter</a></li>
@@ -38,8 +38,8 @@
         <div class="top-divider"></div>
         <div class="content">
         	<img src="images/designer-photo.jpg" />
-            <h2>My Name is John Doe, and I am a Designer</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras diam risus, dignissim pharetra sagittis sed, adipiscing nec felis. Maecenas non nulla eget ligula semper aliquet. Pellentesque adipiscing pulvinar tortor, a adipiscing felis commodo in. Vestibulum dui magna, mattis in bibendum a, congue vitae lectus. In eu odio tortor, vel congue lacus. Donec viverra viverra eros, in egestas ligula adipiscing non. Morbi et ultricies sapien. Duis metus odio, commodo in tempor quis, euismod et ligula. Vivamus tristique condimentum ipsum sit amet posuere.</p> 
+            <h2>My Name is Sudhanshu Sharma, and I am a Mobile Application Developer</h2>
+            <p>I am a passionate software engineer with 4+ years of work experience in iOS Development / Android Development in Hong Leong Bank Kualampur Malaysia. I also have an experience in developing back-end APIs (PHP) for multiple applications.</p> 
             <ul id="service-icons">
             	<li class="services-design">Design</li>
                 <li class="services-mobile">Mobile</li>
