--- a/index.htm
+++ b/index.htm
@@ -37,7 +37,7 @@
         </ul>
         <div class="top-divider"></div>
         <div class="content">
-        	<img src="images/sudhanshu.jpg" />
+        	<img src="images/Sudhanshu.jpg" />
             <h2>My Name is Sudhanshu Sharma, and I am a Mobile Application Developer</h2>
             <p>I am a passionate software engineer with 4+ years of work experience in iOS Development / Android Development in Hong Leong Bank Kualampur Malaysia. I also have an experience in developing back-end APIs (PHP) for multiple applications.</p> 
             <ul id="service-icons">
