--- a/index.htm
+++ b/index.htm
@@ -57,18 +57,18 @@
         <div class="top-divider"></div>
         <div class="content">
             <div class="col">
-            <h2>Description of Work</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras diam risus, dignissim pharetra sagittis sed, adipiscing nec felis. Maecenas non nulla eget ligula semper aliquet. Pellentesque adipiscing pulvinar tortor, a adipiscing felis commodo in. Vestibulum dui magna, mattis in bibendum a, congue vitae lectus. In eu odio tortor, vel congue lacus. Donec viverra viverra eros, in egestas ligula adipiscing non. Morbi et ultricies sapien. Duis metus odio, commodo in tempor quis, euismod et ligula. Vivamus tristique condimentum </p>
+            <h2>HLB Nao (Robot)</h2>
+            <p>HLB NAO is the banking application which has the feature to recognize the customer and ask question accordingly and give them proper suggestions through NAO robot. </p>
             </div>
             
             <div class="col col-mid">
-            <h2>Description of Work</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras diam risus, dignissim pharetra sagittis sed, adipiscing nec felis. Maecenas non nulla eget ligula semper aliquet. Pellentesque adipiscing pulvinar tortor, a adipiscing felis commodo in. Vestibulum dui magna, mattis in bibendum a, congue vitae lectus. In eu odio tortor, vel congue lacus. Donec viverra viverra eros, in egestas ligula adipiscing non. Morbi et ultricies sapien. Duis metus odio, commodo in tempor quis, euismod et ligula. Vivamus tristique condimentum </p>
+            <h2>Local Heroes</h2>
+            <p>This is the grocery e-commerce application where customers can book their orders and scan with QR-code and then pickup person will pick up the order and deliver to the customer.</p>
             </div>
             
             <div class="col">
-            <h2>Description of Work</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras diam risus, dignissim pharetra sagittis sed, adipiscing nec felis. Maecenas non nulla eget ligula semper aliquet. Pellentesque adipiscing pulvinar tortor, a adipiscing felis commodo in. Vestibulum dui magna, mattis in bibendum a, congue vitae lectus. In eu odio tortor, vel congue lacus. Donec viverra viverra eros, in egestas ligula adipiscing non. Morbi et ultricies sapien. Duis metus odio, commodo in tempor quis, euismod et ligula. Vivamus tristique condimentum </p>
+            <h2>Windcom</h2>
+            <p>This is the survey application where admin can create different screens of the every survey from dashboard that will reflect on the android application according to the survey type. All the data would be save on local database (Sqlite). This application is fully dynamic where every view of the screen is dynamic according to survey type.</p>
             </div>
         </div>    
         <div class="bottom-divider"></div>
