--- a/index.htm
+++ b/index.htm
@@ -31,9 +31,8 @@
     <div id="about">
     	<h1>Sudhanshu Sharma</h1>
         <ul id="top-social">
-        	<li><a href="#" class="facebook">Facebook</a></li>
-            <li><a href="#" class="twitter">Twitter</a></li>
-            <li><a href="#" class="linkedin">LinkedIn</a></li>
+        	<li><a href="https://www.facebook.com/sid.sharma.3914207" class="facebook">Facebook</a></li>
+            <li><a href="https://www.linkedin.com/in/sudhanshu-sharma-a93038143/" class="linkedin">LinkedIn</a></li>
         </ul>
         <div class="top-divider"></div>
         <div class="content">
@@ -70,7 +69,23 @@
             <h2>Windcom</h2>
             <p>This is the survey application where admin can create different screens of the every survey from dashboard that will reflect on the android application according to the survey type. All the data would be save on local database (Sqlite). This application is fully dynamic where every view of the screen is dynamic according to survey type.</p>
             </div>
-        </div>    
+        </div>
+        <div class="content">
+            <div class="col">
+            <h2>HLB Nao (Robot)</h2>
+            <p>HLB NAO is the banking application which has the feature to recognize the customer and ask question accordingly and give them proper suggestions through NAO robot. </p>
+            </div>
+            
+            <div class="col col-mid">
+            <h2>Local Heroes</h2>
+            <p>This is the grocery e-commerce application where customers can book their orders and scan with QR-code and then pickup person will pick up the order and deliver to the customer.</p>
+            </div>
+            
+            <div class="col">
+            <h2>Windcom</h2>
+            <p>This is the survey application where admin can create different screens of the every survey from dashboard that will reflect on the android application according to the survey type. All the data would be save on local database (Sqlite). This application is fully dynamic where every view of the screen is dynamic according to survey type.</p>
+            </div>
+        </div>        
         <div class="bottom-divider"></div>
     </div>
 <!--End Experience Section-->
