--- a/index.htm
+++ b/index.htm
@@ -72,18 +72,18 @@
         </div>
         <div class="content">
             <div class="col">
-            <h2>HLB Nao (Robot)</h2>
-            <p>HLB NAO is the banking application which has the feature to recognize the customer and ask question accordingly and give them proper suggestions through NAO robot. </p>
+            <h2>HomeTrust</h2>
+            <p>This is real estate application where user can see the properties, price,  can place bid, can see street view. If have created this application on both the platforms (iOS/Android)</p>
             </div>
             
             <div class="col col-mid">
-            <h2>Local Heroes</h2>
-            <p>This is the grocery e-commerce application where customers can book their orders and scan with QR-code and then pickup person will pick up the order and deliver to the customer.</p>
+            <h2>Insider Agent Deals</h2>
+            <p>Insider Agent deals allow you to share your off-market, deeply discounted deals with your buyers. Easily text or email your buyers, directly from the app, about any property you think they'll be interested in</p>
             </div>
             
             <div class="col">
-            <h2>Windcom</h2>
-            <p>This is the survey application where admin can create different screens of the every survey from dashboard that will reflect on the android application according to the survey type. All the data would be save on local database (Sqlite). This application is fully dynamic where every view of the screen is dynamic according to survey type.</p>
+            <h2>Blood Connect Application</h2>
+            <p>Blood Connect Android App to support the common people who needs blood.through this app he can easily request for blood and the other person who want to donate can easily donate the blood to nearby location.</p>
             </div>
         </div>        
         <div class="bottom-divider"></div>
