--- a/index.htm
+++ b/index.htm
@@ -119,19 +119,18 @@
     	<h1>Connect</h1>
         <div class="top-divider"></div>
         	<div class="content">
-            	<div id="form">
+            	<div id="form" form action="https://formspree.io/sameersharma078626@gmail.com" method="POST">
                 	<form action="#">
                     	<span>Name</span>
                         <input type="text" name="name" class="name" />
                         <span>Email</span>
-                        <input type="text" name="email" class="email"/>
+                        <input type="email" name="email" class="email"/>
                         <span>Message</span>
                         <textarea class="message"></textarea>
-                        <input type="submit" name="submite" value="Submit" class="submit">
+                        <input type="submit" name="submit" value="Submit" class="submit">
                     </form>
                 </div>
                 <div id="social-footer">
-                	<h2>Follow Me:</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras diam risus, dignissim pharetra sagittis sed, adipiscing nec felis. Maecenas non nulla eget ligula semper </p>
                     <ul id="sm-links">
                     	<li><a href="#" class="facebook">Facebook</a></li>
