--- a/index.htm
+++ b/index.htm
@@ -119,8 +119,8 @@
     	<h1>Connect</h1>
         <div class="top-divider"></div>
         	<div class="content">
-            	<div id="form" form action="https://formspree.io/sameersharma078626@gmail.com" method="POST">
-                	<form action="#">
+            	<div id="form">
+                	<form action="https://formspree.io/sameersharma078626@gmail.com" method="POST">
                     	<span>Name</span>
                         <input type="text" name="name" class="name" />
                         <span>Email</span>
