--- a/index.htm
+++ b/index.htm
@@ -38,7 +38,7 @@
         <div class="content">
             <img src="images/Sudhanshu.jpg" />
             <h2>My Name is Sudhanshu Sharma, Senior Software Developer (iOS/Android/React-Native) at Hong Leong Bank</h2>
-            <p>I am a passionate senior software engineer with 5 years of work experience in the Architecture, Design, and Coding of complex and diverse software systems with the current focus on iOS Development as well as in Android Development. I have extensive expertise in Agile methodologies, data structures, and algorithms. Experience in the designing workflow of many applications. I also have experience in developing backend APIs (PHP, Python) for multiple applications. I have experience with third-party libraries and APIs like Alamofire (for iOS Development/Debugging), Google Volley/Picasso, etc. Worked on more than 25+ applications. 
+            <p>I am a passionate senior software engineer with 5 years of work experience in the Architecture, Design, and Coding of complex and diverse software systems with the current focus on React-Native, iOS Development as well as in Android Development. I have extensive expertise in Agile methodologies, data structures, and algorithms. Experience in the designing workflow of many applications. I also have experience in developing backend APIs (PHP, Python) for multiple applications. Worked on more than 25+ applications. 
 
             Technology strengths include:
 
@@ -49,9 +49,9 @@
             -- Experience in creating RESTful APIs using PHP, Python, and vapor and build Back-End services in Firebase, and Azure clouds.
             -- Experience in Visual Basic Application (VBA). I have worked on the FTFC project of Hong Leong. 
 
-            App Management & Tracking Tools: Google Analytics, Testflight, Fabric and Crashlytic LogCat, GitHub, SVN, Source Tree
+            App Management & Tracking Tools: Google Analytics, Testflight, Fabric and Crashlytic LogCat, GitHub, SVN, Source Tree, Dynatrace, Bitbucket
 
-            -- Deep understanding in Core Data, GCD, UIKit, MVVM
+            -- Deep understanding in Core Data, GCD, UIKit, MVVM, Redux-Saga.
 
             </p> 
            <!--  <ul id="service-icons">
