--- a/index.htm
+++ b/index.htm
@@ -37,8 +37,8 @@
         <div class="top-divider"></div>
         <div class="content">
             <img src="images/Sudhanshu.jpg" />
-            <h2>My Name is Sudhanshu Sharma, Senior Software Developer (iOS/Android/React-Native) at Hong Leong Bank</h2>
-            <p>I am a passionate senior software engineer with 5 years of work experience in the Architecture, Design, and Coding of complex and diverse software systems with the current focus on React-Native, iOS Development as well as in Android Development. I have extensive expertise in Agile methodologies, data structures, and algorithms. Experience in the designing workflow of many applications. I also have experience in developing backend APIs (PHP, Python) for multiple applications. Worked on more than 25+ applications. 
+            <h2>My Name is Sudhanshu Sharma, Senior Software Developer (iOS/Android/React-Native) at AIA Insurance</h2>
+            <p>I am a passionate senior software engineer with 6 years of work experience in the Architecture, Design, and Coding of complex and diverse software systems with the current focus on React-Native, iOS Development as well as in Android Development. I have extensive expertise in Agile methodologies, data structures, and algorithms. Experience in the designing workflow of many applications. I also have experience in developing backend APIs (PHP, Python) for multiple applications. Worked on more than 25+ applications. 
 
             Technology strengths include:
 
