--- a/index.htm
+++ b/index.htm
@@ -150,9 +150,9 @@
             <div class="content">
                 <div id="social-footer">
                     <p>Email : Sudhanshusharma435@gmail.com</p>
-                    <p>Mobile : +918318133660, +601161365010</p>
+<!--                     <p>Mobile : +918318133660, +601161365010</p> -->
                     <ul id="sm-links">
-                        <li><a href="https://www.facebook.com/sid.sharma.3914207" class="facebook">Facebook</a></li>
+<!--                         <li><a href="https://www.facebook.com/sid.sharma.3914207" class="facebook">Facebook</a></li> -->
                         <li><a href="https://www.linkedin.com/in/sudhanshu-sharma-a93038143/" class="linkedin">LinkedIn</a></li>
                     </ul>
                 </div>
