--- a/index.htm
+++ b/index.htm
@@ -31,27 +31,27 @@
     <div id="about">
         <h1>Sudhanshu Sharma</h1>
         <ul id="top-social">
-            <li><a href="https://www.facebook.com/sid.sharma.3914207" class="facebook">Facebook</a></li>
+<!--             <li><a href="https://www.facebook.com/sid.sharma.3914207" class="facebook">Facebook</a></li> -->
             <li><a href="https://www.linkedin.com/in/sudhanshu-sharma-a93038143/" class="linkedin">LinkedIn</a></li>
         </ul>
         <div class="top-divider"></div>
         <div class="content">
             <img src="images/Sudhanshu.jpg" />
-            <h2>My Name is Sudhanshu Sharma, Senior Software Developer (iOS/Android/React-Native) at AIA Insurance</h2>
-            <p>I am a passionate senior software engineer with 6 years of work experience in the Architecture, Design, and Coding of complex and diverse software systems with the current focus on React-Native, iOS Development as well as in Android Development. I have extensive expertise in Agile methodologies, data structures, and algorithms. Experience in the designing workflow of many applications. I also have experience in developing backend APIs (PHP, Python) for multiple applications. Worked on more than 25+ applications. 
+            <h2>My Name is Sudhanshu Sharma, Senior Software Developer (iOS/Android/React-Native) at Maybank Singapore</h2>
+            <p>I am a passionate senior software engineer with 7 years of work experience in the Architecture, Design, and Coding of complex and diverse software systems with the current focus on React-Native, iOS Development as well as in Android Development. I have extensive expertise in Agile methodologies, data structures, and algorithms. Experience in the designing workflow of many applications. I also have experience in developing backend APIs (PHP, Python) for multiple applications. Worked on more than 25+ applications. 
 
             Technology strengths include:
 
             -- Designer of complete complex systems (unassisted) and the primary driver in the architecture of others; developed product code, in-house systems, and niche-technology applications.
-            -- High-value creativity, expertise and knowledge in object-oriented design and development.
+            -- High-value creativity, expertise, and knowledge in object-oriented design and development.
             -- Particularly strong in quickly mastering new technologies and paradigms and delivering nearly error-free associated design and code.
-            -- Work in an Agile environment, understand project management methods, and building and implementing reports.
-            -- Experience in creating RESTful APIs using PHP, Python, and vapor and build Back-End services in Firebase, and Azure clouds.
-            -- Experience in Visual Basic Application (VBA). I have worked on the FTFC project of Hong Leong. 
+            -- Work in an Agile environment, understand project management methods, and build and implement reports.
+            -- Experience in creating RESTful APIs using PHP, Python, and Vapor and building Back-End services in Firebase, and Azure clouds.
+            -- Experience in Visual Basic Applications (VBA). I have worked on the FTFC project in Hong Leong. 
 
             App Management & Tracking Tools: Google Analytics, Testflight, Fabric and Crashlytic LogCat, GitHub, SVN, Source Tree, Dynatrace, Bitbucket
 
-            -- Deep understanding in Core Data, GCD, UIKit, MVVM, Redux-Saga.
+            -- Deep understanding of Core Data, GCD, UIKit, MVVM, and Redux-Saga.
 
             </p> 
            <!--  <ul id="service-icons">
